environment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pruebadummy-deploy
  labels:
    app: pruebadummy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pruebadummy
  template:
    metadata:
      labels:
        app: pruebadummy
    spec:
      containers:
      - name: node-app
        image: jhostterv/pruebadummy:34
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
