environment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pruebadummy-svc
spec:
  type: ClusterIP
  selector:
    app: pruebadummy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
