environment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pruebadummy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: pruebadummy.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pruebadummy-svc
            port:
              number: 80
